# rh-local-voice

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Local Voice Assistant Plugin PVA.md  README.md  Race Voice Plugin PVA.md  Sendspin Service Package PVA.md  compose.yaml  pyproject.toml
.github/: renovate.json
.github/actions/build-sendspin-deb/: action.yaml
.github/workflows/: build.yaml  linting.yaml  release-drafter.yaml  release-version.yaml  release.yaml  rhfest.yaml
custom_plugins/local_voice/: __init__.py  audio_queue.py  const.py  locales.json  manifest.json  output.py  piper.py  plugin.py  sendspin.py  ui.py
custom_plugins/local_voice/player/: index.html
custom_plugins/local_voice/services/: __init__.py  (+4 more)
custom_plugins/race_voice/: audio_queue.py  const.py  manifest.json  output.py  piper.py  plugin.py  ui.py
docs/: architecture.md  pilot-filter-feature.md  usage.md
packaging/: nfpm.yaml
packaging/deb/: README.md  control  postinst  postrm  prerm  sendspin-service.default  sendspin-service.service
player/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
player/src/: index.tsx  qr.ts  style.css
sendspin_player/: README.md  index.html  package-lock.json  package.json  vite.config.ts
sendspin_player/src/: index.css  index.tsx  main.tsx  qr.ts  vite-env.d.ts
sendspin_service/: __init__.py  __main__.py  audio_queue.py  player.py  sendspin.py  server.py
tools/: __init__.py  build_sendspin_service_deb.py  check_release_version.py
(+9 files in other folders)
